add package xspace to handle space in the end of \MSC and get rid of all manual \MCS\
sed -i "s/\\\MCS\\\/\\\MCS/g" *.tex

git-svn-id: https://svn.mccode.org/svn/McStasTeX@341 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Adapt_check.tex
+++ b/trunk/Adapt_check.tex
@@ -20,4 +20,4 @@ COMPONENT mycheck = Adapt_check(source_comp = mysource)
 
 Only one instance of Adapt\_check is allowed in an instrument.
 
-We suggest, as alternative method, to make use of the \texttt{SPLIT} keyword, as described in the \MCS\ User Manual.
+We suggest, as alternative method, to make use of the \texttt{SPLIT} keyword, as described in the \MCS User Manual.
