--- a/trunk/ISISdoc.tex
+++ b/trunk/ISISdoc.tex
@@ -65,7 +65,7 @@ Groove, Narrow, Broad. ii) Views seen by each beamline, for TS1:
 Prisma, Maps, crisp etc. and for TS2: E1-E9 (East) and W1-W9
 (West).
 
-The \MCS\ distribution includes some example moderator files for TS1 (water,h2,ch4) and TS2 (broad, narrow, hydrogen, groove), but others are available at \\ \verb+http://www.isis.rl.ac.uk/Computing/Software/MC/+, including instrument specific models.
+The \MCS distribution includes some example moderator files for TS1 (water,h2,ch4) and TS2 (broad, narrow, hydrogen, groove), but others are available at \\ \verb+http://www.isis.rl.ac.uk/Computing/Software/MC/+, including instrument specific models.
 
 % Views seen by each beamline, for TS1 N-N (North) and S-S
 % (south) and TS2: E1-E9 (East) and W1-W9 (West).
