--- a/trunk/Monitor_nD.tex
+++ b/trunk/Monitor_nD.tex
@@ -161,14 +161,14 @@ memory and generate huge files.
 
 \subsection{Monitor equivalences}
 
-In the following table \ref{t:monitor-nd-equiv}, we show how the Monitor\_nD may substitute any other \MCS\ monitor.
+In the following table \ref{t:monitor-nd-equiv}, we show how the Monitor\_nD may substitute any other \MCS monitor.
 
 \begin{table}
   \begin{center}
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
 \hline
-\MCS\ monitor & Monitor\_nD equivalent \\
+\MCS monitor & Monitor\_nD equivalent \\
 \hline
 Divergence\_monitor & {\it options}="dx bins=$ndiv$ limits=[$-\alpha/2 \alpha/2$],
                                 lambda bins=$nlam$ limits=[$\lambda_0$ $\lambda_1$] file=$file$"\\
