--- a/trunk/abstract_comp.tex
+++ b/trunk/abstract_comp.tex
@@ -13,8 +13,8 @@ cases.
 This report constitutes the component manual for McStas, and,
 together with the manual for the McStas system, it
 contains full documentation of all aspects of the program. It covers
-a description of all official components of the \MCS\ package with
+a description of all official components of the \MCS package with
 some theoretical background. Selected test
-instruments and representative \MCS\ simulations performed with these
+instruments and representative \MCS simulations performed with these
 instruments are described in the User Manual.
 
