--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -5,7 +5,7 @@
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This report documents \MCS\ version \version, released \reldate
+This report documents \MCS version \version, released \reldate
 \vskip\baselineskip\noindent
 The authors are:
 \begin{quote}
