--- a/trunk/arm.tex
+++ b/trunk/arm.tex
@@ -9,7 +9,7 @@ The purpose of this component is only to provide a standard
 means of defining a local coordinate system within the instrument definition.
 Other components may then be
 positioned relative to the {\bf Arm} component
-using the \MCS\ meta-language.
+using the \MCS meta-language.
 The use of {\rm Arm} components in the instrument definitions
 is not required but is recommended for clarity.
 {\bf Arm} has no input parameters.
