--- a/trunk/filter.tex
+++ b/trunk/filter.tex
@@ -29,7 +29,7 @@ and relative $thickness$ parameters. If for instance the transmission data file
 corresponds to a 5 cm thick filter, and one would like to simulate a 10 cm thick filter,
 then use $thickness = 2$.
 
-Some example data files are given with \MCS\ in the
+Some example data files are given with \MCS in the
 \verb+MCSTAS/data+ directory as \verb+*.trm+ files for transmission.
 
 \begin{table}
