--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -276,7 +276,7 @@ within which chamfers are taken into account.
 
 The component has also the capability to rotate at a given frequenccy in order to approximate a Fermi Chopper, including phase shift. The approximation resides in the fact that the component is considered fixed during neutron propagation inside slits. Beware that this component is then located at its entry window (not centered as the other Fermi choppers).\index{Bugs}
 
-To activate gravitation support, either select the \MCS\ gravitation support (\verb+mcrun --gravitation ...+ or from the Run dialog of \verb+mcgui+),
+To activate gravitation support, either select the \MCS gravitation support (\verb+mcrun --gravitation ...+ or from the Run dialog of \verb+mcgui+),
 or set the gravitation field strength $G$ (e.g. -9.81 on Earth).
 
 This component is about 50 \% slower than the \verb+Guide+ component, but has much more capabilities.
