--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -17,6 +17,7 @@
 \usepackage{color}
 \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{xspace}
 
 \definecolor{srcback}{rgb}{1,0.8,0.1}
 
@@ -45,9 +46,9 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 
 
 
-\newcommand{\MCS}{McStas} %FIXME xspace should be used here!
-\newcommand{\version}{{1.12}}
-\newcommand{\reldate}{{May, 2008}}
+\newcommand{\MCS}{McStas\xspace} %FIXME xspace should be used here!
+\newcommand{\version}{{2.0}}
+\newcommand{\reldate}{{Sep, 2013}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
