--- a/trunk/misc.tex
+++ b/trunk/misc.tex
@@ -3,7 +3,7 @@
 
 The chapter deals with components that are not easily included
 in any of the other chapters because of their special nature,
-but which are still part of the \MCS\ system.
+but which are still part of the \MCS system.
 
 One part of these components deals with splitting simulations
 into two (or more) stages. For example, a guide system is often
