--- a/trunk/monochromator_flat.tex
+++ b/trunk/monochromator_flat.tex
@@ -14,7 +14,7 @@ The monochromator dimensions are given by the length, $z_{\rm w}$, and
 the height, $y_{\rm h}$. As the parameter names indicate, the
 monochromator is placed in the $z-y$ plane of the local coordinate system.
 This definition is made to ensure that the physical monochromator angle
-(often denoted \verb+A1+) will equal the \MCS\ rotation angle
+(often denoted \verb+A1+) will equal the \MCS rotation angle
 of the Monochromator component around the $y$-axis.
 $R_0$ is the maximal reflectivity and
 $\eta_{\rm h}$ and $\eta_{\rm v}$ are the horizontal and vertical mosaicities,
