--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -5,25 +5,25 @@
 This document contains information on the neutron scattering components
 which are the building blocks for defining instruments
 in the Monte Carlo neutron
-ray-tracing program \MCS\ version \version . The initial
+ray-tracing program \MCS version \version . The initial
 release in October 1998 of version 1.0 was presented in Ref.~\cite{nn_10_20}.
 The reader of this
 document is not supposed to have specific knowledge of neutron scattering,
 but some basic understanding of physics is helpful in
 understanding the theoretical background for the component functionality.
 For details about setting up and running simulations, we refer to
-the \MCS\ system manual \cite{mcstasmanual}.
+the \MCS system manual \cite{mcstasmanual}.
 We assume familiarity with the use of
 the C programming language.
 
 %We especially like to thank Kristian Nielsen for laying a solid foundation
-%for the \MCS\ system, which the authors of this manual benefit from daily.
+%for the \MCS system, which the authors of this manual benefit from daily.
 
 It is a pleasure to thank Dir.~Kurt N.~Clausen, PSI, for his continuous
-support to \MCS\ and for having initiated the project.
-Continuous support to \MCS\ has also come from Prof.~Robert McGreevy, ISIS.
+support to \MCS and for having initiated the project.
+Continuous support to \MCS has also come from Prof.~Robert McGreevy, ISIS.
 Apart from the authors of this manual, also Per-Olof \AA strand, NTNU Trondheim,
-has contributed to the development of the \MCS\ system.
+has contributed to the development of the \MCS system.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
@@ -48,9 +48,9 @@ In case of errors, questions, or suggestions,
 %or other need for support should arise,
 do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
-or consult the \MCS\ home page~\cite{mcstas_webpage}. A special bug/request reporting service is available \cite{mczilla_webpage}.
+or consult the \MCS home page~\cite{mcstas_webpage}. A special bug/request reporting service is available \cite{mczilla_webpage}.
 
-Important developments on the component side in \MCS\ version \version\
+Important developments on the component side in \MCS version \version\
 as compared to version 1.4 (the last version of the component manual;
 then a section of the system manual) include
 
@@ -85,13 +85,13 @@ elastic/inelastic scattering from $S(q,\omega)$ data (E. Farhi, V. Hugouvieux, I
   \end{itemize}
 \end{itemize}
 
-We would like to kindly thank all \MCS\ component contributors. This is the way we improve the software alltogether.
+We would like to kindly thank all \MCS component contributors. This is the way we improve the software alltogether.
 
-The \MCS\ project has been supported by the European Union, initially
+The \MCS project has been supported by the European Union, initially
 through the XENNI program and the RTD ``Cool Neutrons'' program in FP4,
-In FP5, \MCS\ was supported strongly through the
+In FP5, \MCS was supported strongly through the
 ``SCANS'' program.
-Currently, in FP6, \MCS\ is supported through the Joint Research Activity
+Currently, in FP6, \MCS is supported through the Joint Research Activity
 ``MCNSI'' under the Integrated Infrastructure Initiative ``NMI3'', see
 the WWW home pages~\cite{mcnsi_webpage,nmi3_webpage}.
 
