--- a/trunk/random.tex
+++ b/trunk/random.tex
@@ -31,7 +31,7 @@ By indefinite integration we reach
 which is the essential formula for random number transformation, since we
 in general know $\Psi(y)$ and like to determine the relation $y=f(x)$.
 Let us illustrate with a few examples of transformations relevant for the
-\MCS\ components.
+\MCS components.
 
 \paragraph{The circle}
 For finding a random point within the
@@ -79,6 +79,6 @@ numbers with this distribution.
 
 \section{Random generators}
 \index{Monte Carlo method!Random number, Mersenne Twister}
-Eventhough there is the possibility to use the system random generator, as well as the initial \MCS\ version 1.1 random generator, the default algorithm is the so-called "Mersenne Twister", by Makoto Matsumoto and Takuji Nishimura. See \\ \verb+http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/emt.html+ for original source.
+Eventhough there is the possibility to use the system random generator, as well as the initial \MCS version 1.1 random generator, the default algorithm is the so-called "Mersenne Twister", by Makoto Matsumoto and Takuji Nishimura. See \\ \verb+http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/emt.html+ for original source.
 
 It is considered today to be by far the best random generator, which means that both its period is extremely large $2^{19937}-1$, and cross-correlations are negligible, i.e distributions are homogeneous and independent up to 623 dimensions. It is also extremely fast.
