--- a/trunk/res_monitor.tex
+++ b/trunk/res_monitor.tex
@@ -13,7 +13,7 @@ depending on the parameter ``options''.
 The component works like a normal monitor, but
 also records all scattering events and stores
 them to a file that can later be read by 
-the \MCS\ frontend tool \verb+mcresplot+.
+the \MCS frontend tool \verb+mcresplot+.
 
 For time-of-flight (TOF) instruments, {Res\_monitor} should be understood 
 as giving the resolution of one time bin of the TOF-detector only; 
