--- a/trunk/samples.tex
+++ b/trunk/samples.tex
@@ -9,7 +9,7 @@ instrument to model. However, for purpose of simulating
 instrument performance, details of the samples are rather unimportant,
 allowing for simple approximations. On the contrary, for full
 virtual experiments it is of importance to have realistic and
-detailed sample descriptions. \MCS\ contains both simple and detailed
+detailed sample descriptions. \MCS contains both simple and detailed
 samples.
 
 We first consider incoherent scattering. The simple component {\bf V-sample}
@@ -183,7 +183,7 @@ and a non-focusing option.
 
 \subsection{Future development of sample components}
 There is still room for much more development of functionality in
-\MCS\ samples.
+\MCS samples.
 
 A more general SANS sample is under development.
 In addition, a reflectometry sample will soon be developed. In the mean time, you may use the \verb+SiC+ contributed component.
