--- a/trunk/vanadium.tex
+++ b/trunk/vanadium.tex
@@ -76,6 +76,6 @@ one finds that  the resulting direction dependence
 of the scattered intensity is {\em not} isotropic.
 This is explained by the variation of attenuation with
 scattering angle.
-One test result is shown in the instrument example chapter of the \MCS\ User Manual.
+One test result is shown in the instrument example chapter of the \MCS User Manual.
 
 The \verb+Samples_vanadium+ and \verb+Samples_incoherent+ test/example instruments exist in the distribution for this component.
