--- a/trunk/install.tex
+++ b/trunk/install.tex
@@ -7,7 +7,7 @@
 \index{Installing}
 The information in this chapter is also available as a separate
 html/ps/pdf document in the \texttt{install\_docs/} folder of your
-\MCS\ installation package.
+\MCS installation package.
 
 % this file does not exist in SVN ~JS 2013-09-18
 % \input{McCode/doc/install_docs/tex/install_meat.tex}
