--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Preface and acknowledgements}}
 \chapter*{Preface and acknowledgements}
 This document contains information on the Monte Carlo neutron
-ray-tracing program \MCS\ version \version, building on the initial
+ray-tracing program \MCS version \version, building on the initial
 release in October 1998 of version 1.0 as presented in Ref.~\cite{nn_10_20}. The reader of this
 document is supposed to have some knowledge of neutron scattering,
 whereas only little knowledge about simulation techniques is
@@ -11,10 +11,10 @@ required. In a few places, we also assume familiarity with the
 use of the C programming language and UNIX/Linux.
 
 It is a pleasure to thank Prof.~Kurt N.~Clausen, PSI, for his continuous
-support to this project and for having initiated \MCS\ in the first
+support to this project and for having initiated \MCS in the first
 place. Essential support has also been given by Prof.~Robert McGreevy, ISIS.
 Apart from the authors of this manual, also Prof. Per-Olof \AA strand, NTNU Trondheim,
-has contributed to the development of the \MCS\ system.
+has contributed to the development of the \MCS system.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
@@ -37,7 +37,7 @@ In case of errors, questions, or suggestions,
 %or other need for support should arise,
 do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
-or consult the \MCS\ home page~\cite{mcstas_webpage}.
+or consult the \MCS home page~\cite{mcstas_webpage}.
 A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
@@ -47,35 +47,35 @@ If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@
 \end{itemize}
 
 
-\section*{\MCS\ \version\ contributors}
+\section*{\MCS \version\ contributors}
 Several people outside the core developer team have been contributing
-to \MCS\ \version:
+to \MCS \version:
 \begin{itemize}
 \item Mirror\_Elli.comp, Mirror\_para.comp,
   Focalisation\_mirrors.instr (Sylvain Desert, LLB)
 \item PSI\_DMC.instr (L. Keller and U. Filges PSI / P. Willendrup, Ris\o\ DTU)
 \end{itemize}
-Thank you 	guys! This is what \MCS\ is all about!
+Thank you 	guys! This is what \MCS is all about!
 
-Third party software included in \MCS\ are:
+Third party software included in \MCS are:
 \begin{itemize}
 \item perl Math::Amoeba from John A.R. Williams \verb+J.A.R.Williams@aston.ac.uk+.
 \item perl Tk::Codetext from Hans Jeuken \verb+haje@toneel.demon.nl+.
 \item scilab Plotlib from St\'ephane Mottelet \verb+mottelet@utc.fr+.
 \item and optionally PGPLOT from Tim Pearson \verb+tjp@astro.caltech.edu+.
 \end{itemize}
-and special thanks to the following \MCS\ contributors:
+and special thanks to the following \MCS contributors:
 \begin{itemize}
 \item Christophe Taton from ENSIMAG/Grenoble for the MPI support
 \item Reynald Arnerin from Universite J. Fourrier, Grenoble for the complex geometry support in samples
 \end{itemize} 
 
-The \MCS\ project has been supported by the European Union, initially
+The \MCS project has been supported by the European Union, initially
 through the XENNI program and the RTD ``Cool Neutrons'' program in FP4,
-In FP5, \MCS\ was supported strongly through the
+In FP5, \MCS was supported strongly through the
 ``SCANS'' program.
-Currently, in FP6, \MCS\ is supported through the Joint Research Activity
+Currently, in FP6, \MCS is supported through the Joint Research Activity
 ``MCNSI'' under the Integrated Infrastructure Initiative ``NMI3'', see
-the home pages~\cite{mcnsi_webpage,nmi3_webpage}. \MCS\ is also
+the home pages~\cite{mcnsi_webpage,nmi3_webpage}. \MCS is also
 supported directly from the construction project for the ISIS second
 target station (TS2), see~\cite{ts2_webpage}.
