use mhchem \ce{} to generate chemical formulas
git-svn-id: https://svn.mccode.org/svn/McStasTeX@342 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -18,6 +18,7 @@
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{xspace}
+\usepackage{mhchem}
 
 \definecolor{srcback}{rgb}{1,0.8,0.1}
 
@@ -50,6 +51,8 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 \newcommand{\version}{{2.0}}
 \newcommand{\reldate}{{Sep, 2013}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
+
+
 
 % enable index generation
 \makeindex
@@ -84,7 +87,6 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 \include{techniq}
 \include{running}
 \include{kernel}
-%\include{comp} % now in separate Manual
 \include{comp_abstract}
 \include{instrum}
 %\include{test}   % now in instrum
@@ -95,9 +97,6 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 %\include{polarisation}
 \include{random}
 \include{kernelcalls}
-%\include{compcode}
-%\include{instcode}
-%\include{test}
 \include{terms}
 
 
