--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -11,7 +11,7 @@ the Ris\o\ standard triple axis spectrometer TAS1 (\ref{s:TAS1})
 and the ISIS time-of-flight spectrometer PRISMA (\ref{s:PRISMA}).
 Before that, however, we present one example of a component
 test instrument: the instrument to test the component
-{\bf V\_sample} (\ref{s:V-instr}).
+{\bf V-sample} (\ref{s:V-instr}).
 %
 %The source text for the three instrument definitions
 %is listed in Appendix~\ref{instcode}.
@@ -36,7 +36,7 @@ This caterory currently contains a special \verb+Histogrammer+ that can read any
 
 Cold and thermal guide models are given in the ILL neutron site. Descriptions are very accurate, based on actual drawings, including all elements with curvature and gaps. Simulated capture fluxes were found in very good agreement with measurements.
 
-Additionally, the \verb+IN12+ triple-axis instrument has been detailed, in its year 2005 configuration. It is located at the end of the H15 cold guide. sample is a Vanadium rod.
+Additionally, the \verb+IN12+ triple-axis instrument has been detailed, in its year 2005 configuration. It is located at the end of the H15 cold guide. sample is a vanadium rod.
 
 The \verb+IN6+ instrument is an hybrid time-of-flight with 3 monochromators and a Fermi chopper. Sample is an isotropic scatterer (liquid). It makes use of the SPLIT keyword to enhance statistics.
 
@@ -91,7 +91,7 @@ The set-up is shown in figure~\ref{f:V-instr}.
     \includegraphics[width=0.9\textwidth]{figures/vanadium}
   \end{center}
 \caption{A sketch of the test instrument for the component
-V\_sample.}
+V-sample.}
 \label{f:V-instr}
 \end{figure}
 
@@ -164,7 +164,7 @@ the 20~mm option and modeled the channel with two slits to match
 the experimental set-up.
 
 In the test experiments, we used two standard samples:
-An Al$_2$O$_3$ powder sample and a vanadium sample. The instrument
+An \ce{\end{lstlisting}Al2O3} powder sample and a vanadium sample. The instrument
 definitions use either of these samples of the correct
 size. Both samples are chosen to focus on the opening aperture of
 collimator 2 (the one between the sample and the analyser).
@@ -203,7 +203,7 @@ In order to test the \MCS package on a qualitative level,
 we have performed a very detailed comparison of a simulation with a
 standard experiment from TAS1. The measurement series
 constitutes a complete alignment of the spectrometer,
-using the direct beam and scattering from V and Al$_2$O$_3$
+using the direct beam and scattering from V and \ce{\end{lstlisting}Al2O3}
 samples at an incoming energy of 20.0~meV, using the second order
 scattering from the monochromator.
 
@@ -261,7 +261,7 @@ Collimations: open-30'-28'-67'.
 \label{f:v_2ta_zero}
 \end{figure}
 
-The result of a $2\theta_s$ scan on an Al$_2$O$_3$
+The result of a $2\theta_s$ scan on an \ce{\end{lstlisting}Al2O3}
 powder sample in two-axis mode is shown in Figure \ref{f:al2o3}.
 Both for the scan in focusing mode (+ $-$ +)
 and for the one in defocusing mode (+ + +) (not shown),
@@ -271,7 +271,7 @@ the agreement between simulation and experiment is excellent.
   \begin{center}
     \includegraphics[width=0.6\textwidth]{figures/al2o3-focus.eps}
   \end{center}
-\caption{TAS1: $2\theta_s$ scans on Al$_2$O$_3$ in two-axis, focusing mode.
+\caption{TAS1: $2\theta_s$ scans on \ce{\end{lstlisting}Al2O3} in two-axis, focusing mode.
 Collimations: open-30'-28'-67'.
 "$\times$": measurements, "o": simulations.
 A constant background is added to the simulated data.}
