remove obsolete text
git-svn-id: https://svn.mccode.org/svn/McStasTeX@344 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -47,7 +47,7 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 
 
 
-\newcommand{\MCS}{McStas\xspace} %FIXME xspace should be used here!
+\newcommand{\MCS}{McStas\xspace}
 \newcommand{\version}{{2.0}}
 \newcommand{\reldate}{{Sep, 2013}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
@@ -57,17 +57,6 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 % enable index generation
 \makeindex
 
-%\title{User and programmers guide\\ to the neutron ray-tracing package
-% \MCS ,\\ version 1.7}
-%\author{Per-Olof \AA strand, Emmanuel Farhi, Kristian Nielsen, Kim Lefmann \\
-% Materials Research Department, \\
-% Ris\o\ National Laboratory, 4000 Roskilde, Denmark}
-%\date{September 14, 2001 \\[2\baselineskip]
-%\begin{center}
-%  \includegraphics[width=4.5in]{vanadium-surf-2.eps}
-%\end{center}
-%\includegraphics[width=0.45\myheight]{risoe-logo.eps}%
-%}
 
 \begin{document}
 
