fix typo in \ce and clean the text
git-svn-id: https://svn.mccode.org/svn/McStasTeX@346 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -164,7 +164,7 @@ the 20~mm option and modeled the channel with two slits to match
 the experimental set-up.
 
 In the test experiments, we used two standard samples:
-An \ce{\end{lstlisting}Al2O3} powder sample and a vanadium sample. The instrument
+An \ce{Al2O3} powder sample and a vanadium sample. The instrument
 definitions use either of these samples of the correct
 size. Both samples are chosen to focus on the opening aperture of
 collimator 2 (the one between the sample and the analyser).
@@ -203,7 +203,7 @@ In order to test the \MCS package on a qualitative level,
 we have performed a very detailed comparison of a simulation with a
 standard experiment from TAS1. The measurement series
 constitutes a complete alignment of the spectrometer,
-using the direct beam and scattering from V and \ce{\end{lstlisting}Al2O3}
+using the direct beam and scattering from V and \ce{Al2O3}
 samples at an incoming energy of 20.0~meV, using the second order
 scattering from the monochromator.
 
@@ -261,7 +261,7 @@ Collimations: open-30'-28'-67'.
 \label{f:v_2ta_zero}
 \end{figure}
 
-The result of a $2\theta_s$ scan on an \ce{\end{lstlisting}Al2O3}
+The result of a $2\theta_s$ scan on an \ce{Al2O3}
 powder sample in two-axis mode is shown in Figure \ref{f:al2o3}.
 Both for the scan in focusing mode (+ $-$ +)
 and for the one in defocusing mode (+ + +) (not shown),
@@ -271,7 +271,7 @@ the agreement between simulation and experiment is excellent.
   \begin{center}
     \includegraphics[width=0.6\textwidth]{figures/al2o3-focus.eps}
   \end{center}
-\caption{TAS1: $2\theta_s$ scans on \ce{\end{lstlisting}Al2O3} in two-axis, focusing mode.
+\caption{TAS1: $2\theta_s$ scans on \ce{Al2O3} in two-axis, focusing mode.
 Collimations: open-30'-28'-67'.
 "$\times$": measurements, "o": simulations.
 A constant background is added to the simulated data.}
